--- a/styles/_empowerment.scss
+++ b/styles/_empowerment.scss
@@ -1,8 +1,9 @@
 @import "theme";
+@import "typography";
 
 .empowerment {
   position: relative;
-  margin-top: #{spacing("8")};
+  margin-top: -5rem;
   padding: 0 #{spacing("4")};
   z-index: 3;
 
@@ -27,55 +28,103 @@
     grid-template-columns: 1fr;
     gap: #{spacing("6")};
     padding: #{spacing("6")};
+    padding-bottom: 0;
+
+    @include mobile {
+      text-align: center;
+    }
+
+    @include tablet {
+      gap: #{spacing("8")};
+      padding: #{spacing("8")};
+      padding-bottom: 0;
+    }
 
     @include desktop {
       grid-template-columns: 1fr 1fr;
-      align-items: center;
       gap: #{spacing("8")};
       padding: #{spacing("12")};
+      padding-bottom: 0;
+      text-align: left;
     }
   }
 
   .text-content {
     .section-title {
-      font-size: #{font-size("2xl")};
-      font-weight: #{font-weight("extrabold")};
+      @include heading-secondary;
       color: color("neutral", "black");
       margin-bottom: #{spacing("4")};
-      line-height: #{line-height("tight")};
+
+      @include mobile {
+        text-align: center;
+      }
+
+      @include tablet {
+        text-align: center;
+      }
 
       @include desktop {
-        font-size: #{font-size("4xl")};
+        text-align: left;
       }
     }
 
     .section-description {
-      font-size: #{font-size("base")};
-      line-height: #{line-height("relaxed")};
+      @include content-regular;
       color: map-get(map-get(map-get($colors, "neutral"), "gray"), "700");
       max-width: 540px;
+      margin: 0 auto;
+
+      @include mobile {
+        text-align: center;
+      }
+
+      @include tablet {
+        text-align: center;
+      }
 
       @include desktop {
-        font-size: #{font-size("lg")};
+        text-align: left;
+        margin: 0;
       }
     }
   }
 
   .image-content {
     position: relative;
-    height: 300px;
+    height: 200px;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
 
+    @include tablet {
+      height: 250px;
+    }
+
     @include desktop {
-      height: 400px;
+      height: 300px;
     }
 
     .globe-illustration {
       position: relative;
       width: 100%;
       height: 100%;
+      display: flex;
+
+      .image {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        max-width: 500px;
+        margin: 0 auto;
+
+        @include mobile {
+          height: 235px;
+        }
+
+        @include tablet {
+          max-width: 400px;
+        }
+      }
     }
 
     .globe {
