--- a/styles/_payment-options.scss
+++ b/styles/_payment-options.scss
@@ -1,49 +1,72 @@
-@import 'theme';
+@import "theme";
 
 .payment-options {
-  padding: #{spacing('20')} 0;
-  background-color: color('neutral', 'white');
+  padding: #{spacing("12")} #{spacing("4")};
+
+  @include tablet {
+    padding: #{spacing("16")} #{spacing("6")};
+  }
+
+  @include desktop {
+    padding: #{spacing("20")} 0;
+  }
+
+  background-color: color("neutral", "white");
 
   .options-grid {
     display: grid;
     grid-template-columns: 1fr;
-    gap: #{spacing('8')};
-    
+    gap: #{spacing("6")};
+
     @include tablet {
       grid-template-columns: repeat(2, 1fr);
+      gap: #{spacing("6")};
     }
-    
+
     @include desktop {
       grid-template-columns: repeat(4, 1fr);
+      gap: #{spacing("8")};
     }
   }
 
   .option-card {
-    text-align: left;
-    padding: #{spacing('6')};
+    text-align: center;
+    padding: #{spacing("4")};
+
+    @include tablet {
+      text-align: left;
+      padding: #{spacing("5")};
+    }
+
+    @include desktop {
+      padding: #{spacing("6")};
+    }
 
     .option-icon {
-      margin-bottom: #{spacing('4')};
+      margin-bottom: #{spacing("4")};
       display: inline-block;
 
       svg {
         width: 48px;
         height: 48px;
-        color: color('primary');
+        color: color("primary");
       }
     }
 
     .option-title {
-      font-size: #{font-size('xl')};
-      font-weight: #{font-weight('semibold')};
-      color: color('neutral', 'black');
-      margin-bottom: #{spacing('4')};
+      font-size: #{font-size("lg")};
+
+      @include tablet {
+        font-size: #{font-size("xl")};
+      }
     }
 
     .option-description {
-      color: map-get(map-get(map-get($colors, 'neutral'), 'gray'), '700');
-      line-height: #{line-height('relaxed')};
-      font-size: #{font-size('base')};
+      font-size: #{font-size("sm")};
+
+      @include tablet {
+        font-size: #{font-size("base")};
+      }
     }
   }
 }
