update go live styles

--- a/styles/_customers.scss
+++ b/styles/_customers.scss
@@ -1,7 +1,7 @@
 @import "theme";
 
 .customers {
-  padding: #{spacing("20")} 0;
+  padding-bottom: #{spacing("10")};
   overflow: hidden;
 
   @include mobile {
