--- a/styles/_stats.scss
+++ b/styles/_stats.scss
@@ -64,6 +64,10 @@
     align-items: baseline;
     margin-bottom: #{spacing("4")};
 
+    @include mobile {
+      justify-content: center;
+    }
+
     .stat-prefix,
     .stat-suffix {
       font-size: #{font-size("5xl")};
@@ -89,7 +93,6 @@
 
       @include mobile {
         font-size: #{font-size("4xl")};
-        justify-content: center;
       }
     }
   }
