--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,6 +9,9 @@
 @import "stats";
 @import "suite-spot";
 @import "go-live";
+@import "privacy";
+@import "terms";
+@import "footer";
 
 * {
   box-sizing: border-box;
