--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -34,7 +34,7 @@ $font-sizes: (
   // 20px
   "2xl": 1.5rem,
   // 24px
-  "3xl": 1.875rem // 30px,
+  "3xl": 1.875rem // 30px,,,,
 );
 
 // Font weights
@@ -101,5 +101,19 @@ $font-weights: (
 
   @include desktop {
     font-size: 1.25rem;
+  }
+}
+
+@mixin content-small {
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.5;
+
+  @include tablet {
+    font-size: 0.9375rem;
+  }
+
+  @include mobile {
+    font-size: 0.75rem;
   }
 }
